# dev-fingerprint

./: .gitignore  CONTRIBUTING.md  CRITIQUE.md  FINDINGS.md  LICENSE  METHODOLOGY.md  README.md  RESEARCH_AGENDA.md  article.md  generate_figures.py  pyproject.toml  run_analysis.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
binder/: requirements.txt
configs/: developers.yaml
data/ground_truth/: declared.yaml
docs/: _config.yml  index.md
docs/assets/css/: style.scss
notebooks/: exploration.ipynb
reports/real/: Rich-Harris.json  antirez.json  dhh.json  gaearon.json  gvanrossum.json  karpathy.json  ry.json  simonw.json  sindresorhus.json  summary.json  torvalds.json  yyx990803.json
scripts/: migrate_profiles.py
src/devfp/: __init__.py  cli.py  models.py
src/devfp/analyzer/: fingerprint.py  llm_signals.py  style.py  temporal.py
src/devfp/collector/: cache.py  github.py
src/devfp/reporter/: html.py  terminal.py
src/devfp/validation/: __init__.py  calibration.py  cross_validate.py  ground_truth.py
tests/: test_analyzer.py
tests/fixtures/: sample_diff_python.py
