[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-fingerprint"
version = "0.1.0"
description = "Detecting the AI Drift in Famous OSS Contributors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "code-analysis", "github", "ai-detection", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "stylometry-python>=1.4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "plotly>=5.22",
    "jinja2>=3.1",
    "diskcache>=5.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
notebooks = [
    "jupyter>=1.0",
    "nbformat>=5.10",
]

[project.scripts]
devfp = "devfp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/devfp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
